Fix large validation error messages height and overflow

--- a/src/app/validation/error-message/error-message.component.scss
+++ b/src/app/validation/error-message/error-message.component.scss
@@ -1,12 +1,13 @@
 $error-color: #e30613;
 $error-font-size: 0.8rem;
-$error-height: 19px;
+$error-top: 19px;
 $error-opacity: 1;
 
 div.invalid {
   color: $error-color;
   font-size: $error-font-size;
   opacity: $error-opacity;
+  overflow-wrap: break-word;
 }
 
 input:not([type="checkbox"]) + label + :host,
@@ -14,7 +15,6 @@ mz-select-container :host,
 textarea + label + :host {
 
   div.invalid {
-    height: $error-height;
-    margin-top: (-$error-height);
+    margin-top: (-$error-top);
   }
 }
